--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -453,7 +453,7 @@
     "textMobile": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!",
     "terms": [
       {
-        "text": "Round I runs between between May 11, 2021, 00:00 GMT, and May 17, 2021, 23:59 GMT.."
+        "text": "Round I runs between between May 11, 2021, 00:00 GMT, and May 17, 2021, 23:59 GMT."
       },
       {
         "text": "All you need to win in the May Madness Round I is just playing any of the participating games:<br/><br/>●  Book Of Demi Gods II<br/>●  Aztec Spell<br/>●  Story Of Medusa"
