--- a/locales/en.json
+++ b/locales/en.json
@@ -677,7 +677,48 @@
       }
     },
     "aboutUsPage": {
-      "title": "ÜBER UNS"
+      "title": "About us",
+      "text": "Ninecasino is a next-generation high-tech casino with the latest games that have been  developed by the best experts in the industry. We have played in various online casinos for many years. We have a huge amount of accumulated gambling experience. We know what a real player needs.",
+      "advantages": {
+        "text1": "Prompt payouts",
+        "text2": "Licensed online casino",
+        "text3": {
+          "p1": "More than",
+          "p2": "games"
+        },
+        "text4": "support"
+      },
+      "ourSoftware": {
+        "title": "Our software",
+        "text": "The casino uses products that have been made by the best developers of casino software and games in the industry. Amatic, BetSoft, Endorphina, Ezugi, Microgaming, and SoftSwiss. Every gambler will be familiar with them firsthand and trust everything that these names stand for. We trust them too. We do not want our players to feel like experimental lab mice in an abortive experiment, so we offer a reliable solution that we would be delighted to use  ourselves as gamblers."
+      },
+      "offers": {
+        "title": "What do we offer",
+        "bonuses": {
+          "title": "Bonuses",
+          "text": "Our generous \"Welcome Bonus\" brings an additional thrill to excite even the coldest and  most cautious players. Just make your deposit and get back twice as much in your account. And that's not all! Follow the \"Bonuses\" section on our website."
+        },
+        "ourGames": {
+          "title": "Our games",
+          "text": "We care about our players, and we would like to offer something to satisfy every taste.\n          The games which we offer were created by the best developers in the industry. It means\n          that they have excellent graphics, and they sound great, too. Also, the games work under\n          the \"provably fair\" technology."
+        },
+        "jackpots": {
+          "title": "Jackpots",
+          "text": "Everyone dreams about the moment when the magic word JACKPOT appears on the screen,\n          signaling that someone has achieved their dream. With our progressive slots, this magic\n          number is constantly growing every second alongside the size of someone's dream."
+        },
+        "liveGames": {
+          "title": "Live games",
+          "text": "Immerse yourself in the atmosphere of a real casino without leaving your room. Our\n          live-games allow you to feel like you are at the real gaming table all while remaining\n          sitting at home comfortably."
+        },
+        "paymentAndSecurity": {
+          "title": "Payment systems and security",
+          "text": "No one likes to wait. We can offer our players instant deposits and payouts. Before you\n          even have the chance to blink, the money will reach its destination. Choose a currency,\n          make a deposit, take a deep breath, and you are ready to play."
+        },
+        "support": {
+          "title": "24/7 Support",
+          "text": "Though you may encounter some problems, our team of professionals will always be there to\n          help you in these situations. Since you can contact our specialists by chat or e-mail  around the clock, you can be sure to receive assistance in case problems arise."
+        }
+      }
     }
   }
 }
