nine-469 may madness round 2 promotions

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -381,7 +381,7 @@
     "mayMadness" : {
       "title" : "May<br/> madness<br/> od spinomenal",
       "name" : "May madness od spinomenal",
-      "text" : "A je to zase tady – známý poskytovatel Spinomenal vás svým vzrušujícím turnajem May Madness přivede k šílenství. Během tří květnových týdnů si můžete zahrát na skvělých slotech a rozbít velmi štědrý prize pool v hodnotě 60000eur! <br/><br/>Začněme s kolem I! Uskuteční se od 5. května 2021 00:00 GMT do 17. května 2021 23:59 GMT."
+      "text" : "A je to zase tady – známý poskytovatel Spinomenal vás svým vzrušujícím turnajem May Madness přivede k šílenství. Během tří květnových týdnů si můžete zahrát na skvělých slotech a rozbít velmi štědrý prize pool v hodnotě 60000eur! <br/><br/>Začněme s kolem II! Uskuteční se od 18. května 2021 00:00 GMT do 24. května 2021 23:59 GMT."
     }
   },
   "tournaments" : {
