--- a/locales/de.json
+++ b/locales/de.json
@@ -387,7 +387,7 @@
     "mayMadness" : {
       "title" : "May<br/> madness<br/> von spinomenal",
       "name" : "May madness von spinomenal",
-      "text" : "Wieder einmal lässt der bekannte Spieleanbieter Spinomenal Sie bei seinem spannenden Wahnsinnsturnier im Mai verrückt spielen. Während drei Wochen im Mai können Sie sich bei seinen coolen Automatenspielen erfreuen und sich ein Stück von dem üppigen Preisgeld in Höhe von 60.000 Euro sichern!<br/><br/>Fangen wir an mit Runde I! Sie läuft ab dem 11. Mai um 00:00 Uhr GMT und endet am 17. Mai 2021 um 23:59 Uhr GMT."
+      "text" : "Wieder einmal lässt der bekannte Spieleanbieter Spinomenal Sie bei seinem spannenden Wahnsinnsturnier im Mai verrückt spielen. Während drei Wochen im Mai können Sie sich bei seinen coolen Automatenspielen erfreuen und sich ein Stück von dem üppigen Preisgeld in Höhe von 60.000 Euro sichern!<br/><br/>Fangen wir an mit Runde II! Sie läuft ab dem 18. Mai um 00:00 Uhr GMT und endet am 24. Mai 2021 um 23:59 Uhr GMT."
     }
   },
   "tournaments" : {
