--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -386,7 +386,7 @@
     "mayMadness" : {
       "title" : "May<br/> madness<br/> de spinomenal",
       "name" : "May madness de spinomenal",
-      "text" : "Une fois de plus, le fameux Spinomenal va vous faire vivre des moments inoubliables grâce au passionnant tournoi May Madness. Pendant trois semaines en mai, vous pouvez profiter de ses géniales machines à sous et remporter une partie de la généreuse cagnotte de 60 000 EUR!<br/><br/>Commençons par le premier tour! Ça se passe entre le 11 mai 2021, 00 h 00 GMT et le 17 mai 2021, 23 h 59 GMT."
+      "text" : "Une fois de plus, le fameux Spinomenal va vous faire vivre des moments inoubliables grâce au passionnant tournoi May Madness. Pendant trois semaines en mai, vous pouvez profiter de ses géniales machines à sous et remporter une partie de la généreuse cagnotte de 60 000 EUR!<br/><br/>Commençons par le deuxième tour! Ça se passe entre le 18 mai 2021, 00 h 00 GMT et le 24 mai 2021, 23 h 59 GMT."
     }
   },
   "dropsWins" : {
