--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -388,7 +388,7 @@
     "mayMadness": {
       "title": "May<br/> madness<br/> by spinomenal",
       "name": "May madness by spinomenal",
-      "text": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!<br/><br/>Let’s start with Round I! It runs between May 11, 2021, 00:00 GMT, and May 17, 2021, 23:59 GMT."
+      "text": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!<br/><br/>Let’s start with Round II! It runs between May 18, 2021, 00:00 GMT, and May 24, 2021, 23:59 GMT."
     }
   },
   "tournaments": {
