--- a/locales/cs.json
+++ b/locales/cs.json
@@ -69,10 +69,10 @@
   "notifications": {
     "cancelBonusError": "Chyba zrušení bonusu",
     "cancelBonusSuccess": "Tvůj bonus byl zrušen",
-    "cancelFreeSpinError": "Chyba při zrušení bezplatného roztočení",
-    "cancelFreeSpinSuccess": "Vaše točení zdarma bylo zrušeno",
-    "activateFreeSpinError": "Chyba při aktivaci bezplatného odstřeďování",
-    "activateFreeSpinSuccess": "Vaše bezplatná rotace byla aktivována"
+    "cancelFreeSpinError": "Chyba zrušení spinu zdarma",
+    "cancelFreeSpinSuccess": "Váš spin zdarma byl zrušen",
+    "activateFreeSpinError": "Chyba aktivace spinu zdarma",
+    "activateFreeSpinSuccess": "Váš spin zdarma byl aktivován"
   },
   "auth" : {
     "loginTitle" : "Vítej zpět",
